# clau-doom

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_ko.md  conftest.py  go.mod  pytest.ini  requirements-analysis.txt
.claude/agents/: arch-documenter.md  infra-docker-expert.md  mgr-creator.md  (+15 more)
agent-core/: Cargo.toml  build.rs
agent-core/.claude/agent-memory/lang-golang-expert/: MEMORY.md
agent-core/.claude/agent-memory/lang-python-expert/: MEMORY.md
agent-core/.claude/agent-memory/research-pi/: MEMORY.md
agent-core/benches/: decision_cascade.rs
agent-core/src/: cascade.rs  lib.rs  main.rs
agent-core/src/cache/: mod.rs
agent-core/src/game/: mod.rs
agent-core/src/grpc/: mod.rs
agent-core/src/rag/: mod.rs
agent-core/src/strategy/: mod.rs
glue/: KILLCOUNT_FIX.md  action_functions.py  anchor_validate.py  doe021_analysis.py  doe021_evolve.py  doe021_report_analysis.py  doe022_gen_docs.py  doe024_gen_docs.py  doe_001_execute.py  doe_001_real.py  doe_002_execute.py  doe_executor.py  duckdb_writer.py  episode_runner.py  grpc_client.py  md_parser.py  requirements.txt  test_vizdoom_fix.py  vizdoom_bridge.py
infra/: docker-compose.yml
proto/: agent.proto  orchestrator.proto
research/: CLAUDE.md  DOE_CATALOG.md  FINDINGS.md  FMEA_REGISTRY.md  HYPOTHESIS_BACKLOG.md  INFRA_VERIFICATION_REPORT.md  INTERIM_REPORT_DOE001_020.md  INTERIM_REPORT_DOE021_029.md  NEXT_SESSION_PROMPT.md  NEXT_SESSION_TODO.md  PHASE4_ORDERS_12_VERIFICATION.md  RESEARCH_LOG.md  SPC_STATUS.md
scripts/: setup.sh  verify_reproducibility.py
(+300 files in other folders)
